--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ distro==1.9.0
 executing==2.0.1
 faiss-cpu==1.8.0
 Flask==3.0.2
+Flask-Cors==4.0.0
 Flask-SQLAlchemy==3.1.1
 frozenlist==1.4.1
 google-ai-generativelanguage==0.4.0
